[gd_scene load_steps=46 format=3 uid="uid://ccwgdqlbypx40"]

[ext_resource type="Script" path="res://Script/Enemy/PatrolEnemy/patrol_enemy.gd" id="1_0e2l3"]
[ext_resource type="Script" path="res://Script/CombatComponent/status_value.gd" id="2_bnjfc"]
[ext_resource type="Script" path="res://Script/CombatComponent/attack_box.gd" id="2_d3c0b"]
[ext_resource type="Material" uid="uid://cmv24i1lrmfiw" path="res://Shader/enemy.tres" id="2_vm16v"]
[ext_resource type="Texture2D" uid="uid://ddg4fjmi0gu5e" path="res://Art/Enemy/PatrolEnemy/move.png" id="3_6xjlv"]
[ext_resource type="Script" path="res://Script/CombatComponent/health_system.gd" id="3_djhrd"]
[ext_resource type="Script" path="res://Script/CombatComponent/damage_data.gd" id="3_k24pt"]
[ext_resource type="Script" path="res://Script/CombatComponent/hurt_box.gd" id="4_n2be7"]
[ext_resource type="Texture2D" uid="uid://dbffa3d86qrba" path="res://Art/Effect/Tex_random.png" id="5_ufiah"]
[ext_resource type="Texture2D" uid="uid://mrdy362tqpjr" path="res://Art/Effect/slash_1.png" id="6_6w2mu"]
[ext_resource type="PackedScene" uid="uid://bkijr6cnrf2dy" path="res://Scenes/Effect/dead_particle.tscn" id="7_ikyqw"]
[ext_resource type="AudioStream" uid="uid://dgcehrixe8dlp" path="res://Audio/Effect/HitSound/body_hit_finisher_23.wav" id="9_ffurv"]
[ext_resource type="AudioStream" uid="uid://cg34kv7j6hqy5" path="res://Audio/Effect/HitSound/face_hit_small_78.wav" id="9_q786d"]
[ext_resource type="Texture2D" uid="uid://byku3155bejsl" path="res://Art/Effect/hollow fade circle.png" id="9_thbx5"]
[ext_resource type="Script" path="res://Script/Enemy/State/enemy_state_machine.gd" id="11_o7bgh"]
[ext_resource type="Script" path="res://Script/Enemy/State/patrol_state.gd" id="12_r6ywx"]
[ext_resource type="Script" path="res://Script/Enemy/State/stagger_state.gd" id="13_312aq"]

[sub_resource type="Resource" id="Resource_dk4yl"]
resource_local_to_scene = true
script = ExtResource("2_bnjfc")
max_value = 1.0

[sub_resource type="Resource" id="Resource_ql74h"]
resource_local_to_scene = true
script = ExtResource("2_bnjfc")
max_value = 3.0

[sub_resource type="Resource" id="Resource_xu48i"]
resource_local_to_scene = true
script = ExtResource("3_djhrd")
health = SubResource("Resource_dk4yl")
stance = SubResource("Resource_ql74h")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t31vm"]
size = Vector2(34, 23)

[sub_resource type="Resource" id="Resource_k3x4j"]
script = ExtResource("3_k24pt")
damage = 1.0
impact = 0.0
knockback_force = 0
element = 0
take_damage_rule = 0
take_damage_mask = 0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o4i44"]
size = Vector2(58, 41)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eoql2"]
size = Vector2(80, 64)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_osip1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gmeac"]
atlas = ExtResource("5_ufiah")
region = Rect2(40.1037, 196.189, 117.956, 113.449)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_ljkc0"]
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 4
particles_anim_loop = true

[sub_resource type="Gradient" id="Gradient_q1h5g"]

[sub_resource type="GradientTexture1D" id="GradientTexture1D_rietf"]
gradient = SubResource("Gradient_q1h5g")

[sub_resource type="Curve" id="Curve_k3t8f"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.649457, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.936842), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_eneel"]
curve = SubResource("Curve_k3t8f")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_jyw1t"]
particle_flag_disable_z = true
gravity = Vector3(0, 0, 0)
scale_min = 0.5
scale_max = 0.5
scale_curve = SubResource("CurveTexture_eneel")
color_ramp = SubResource("GradientTexture1D_rietf")
sub_emitter_mode = 2
sub_emitter_amount_at_end = 20

[sub_resource type="Gradient" id="Gradient_vat7d"]
offsets = PackedFloat32Array(0, 0.916914, 1)
colors = PackedColorArray(1, 1, 1, 1, 0.197937, 0.197937, 0.197937, 1, 0.0705882, 0.0705882, 0.0705882, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_co02a"]
gradient = SubResource("Gradient_vat7d")

[sub_resource type="Curve" id="Curve_oa3qw"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.389474), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_uxq5g"]
curve = SubResource("Curve_oa3qw")

[sub_resource type="Curve" id="Curve_6la2c"]
max_value = 1024.0
_data = [Vector2(0, 1024), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_ttfmq"]
curve = SubResource("Curve_6la2c")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_q30br"]
lifetime_randomness = 0.4
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 23.5
direction = Vector3(0, -1, 0)
spread = 180.0
initial_velocity_min = 110.24
initial_velocity_max = 365.35
velocity_limit_curve = SubResource("CurveTexture_ttfmq")
gravity = Vector3(0, -98, 0)
linear_accel_max = 100.0
scale_min = 0.01
scale_max = 0.3
scale_curve = SubResource("CurveTexture_uxq5g")
color = Color(1, 0.6, 0.521569, 1)
color_ramp = SubResource("GradientTexture1D_co02a")

[sub_resource type="AtlasTexture" id="AtlasTexture_vrioa"]
atlas = ExtResource("5_ufiah")
region = Rect2(41.5117, 196.086, 115.429, 114.746)

[sub_resource type="Animation" id="Animation_37f7t"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Direction/Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Direction/Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_6xjlv")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Direction/Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Direction/Sprite2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -16)]
}

[sub_resource type="Animation" id="Animation_a0tij"]
resource_name = "dead"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Direction/Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_pvxbd"]
resource_name = "idle"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Direction/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_6xjlv")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Direction/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_v6gjb"]
resource_name = "move"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Direction/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_6xjlv")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Direction/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Direction/Sprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -16)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_84mv1"]
_data = {
"RESET": SubResource("Animation_37f7t"),
"dead": SubResource("Animation_a0tij"),
"idle": SubResource("Animation_pvxbd"),
"move": SubResource("Animation_v6gjb")
}

[node name="PatrolEnemy" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 0
script = ExtResource("1_0e2l3")
health_system = SubResource("Resource_xu48i")

[node name="GroundCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, -11.5)
shape = SubResource("RectangleShape2D_t31vm")

[node name="AttackBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0
script = ExtResource("2_d3c0b")
damage_data = SubResource("Resource_k3x4j")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackBox"]
position = Vector2(0, -20.5)
shape = SubResource("RectangleShape2D_o4i44")
debug_color = Color(0.917647, 0.227451, 0.447059, 0.419608)

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 10
script = ExtResource("4_n2be7")
object_tag = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, -32)
shape = SubResource("RectangleShape2D_eoql2")
debug_color = Color(0, 0.635294, 0.4, 0.419608)

[node name="Particle" type="Node2D" parent="."]

[node name="HitEffect" type="CPUParticles2D" parent="Particle"]
material = SubResource("CanvasItemMaterial_osip1")
emitting = false
lifetime = 0.5
one_shot = true
preprocess = 0.03
explosiveness = 0.73
randomness = 0.79
local_coords = true
texture = SubResource("AtlasTexture_gmeac")
emission_shape = 3
emission_rect_extents = Vector2(50, 50)
gravity = Vector2(0, 0)
initial_velocity_min = 185.0
initial_velocity_max = 1000.0
damping_min = 9.0
damping_max = 9.0
scale_amount_min = 0.01
scale_amount_max = 0.3

[node name="SlashEffect" type="CPUParticles2D" parent="Particle"]
material = SubResource("CanvasItemMaterial_ljkc0")
rotation = 0.565487
emitting = false
amount = 1
lifetime = 0.3
one_shot = true
local_coords = true
draw_order = 1
texture = ExtResource("6_6w2mu")
direction = Vector2(0, 0)
gravity = Vector2(0, 0)
scale_amount_min = 0.5
scale_amount_max = 0.7
anim_speed_min = 1.0
anim_speed_max = 1.0

[node name="DeadParticle" parent="Particle" instance=ExtResource("7_ikyqw")]

[node name="Pulse" type="GPUParticles2D" parent="Particle"]
emitting = false
amount = 1
sub_emitter = NodePath("Dust")
process_material = SubResource("ParticleProcessMaterial_jyw1t")
texture = ExtResource("9_thbx5")
lifetime = 0.3
one_shot = true

[node name="Dust" type="GPUParticles2D" parent="Particle/Pulse"]
emitting = false
amount = 20
process_material = SubResource("ParticleProcessMaterial_q30br")
texture = SubResource("AtlasTexture_vrioa")
one_shot = true
explosiveness = 0.76
randomness = 0.26

[node name="Audio" type="Node2D" parent="."]

[node name="HitSound" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("9_q786d")

[node name="DeadSound" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("9_ffurv")
bus = &"Effect"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_84mv1")
}
autoplay = "idle"

[node name="EnemyStateMachine" type="Node" parent="." node_paths=PackedStringArray("InitialState", "animation_player")]
script = ExtResource("11_o7bgh")
InitialState = NodePath("Patrol")
animation_player = NodePath("../AnimationPlayer")

[node name="Patrol" type="Node" parent="EnemyStateMachine"]
script = ExtResource("12_r6ywx")

[node name="stagger" type="Node" parent="EnemyStateMachine"]
script = ExtResource("13_312aq")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
visible = false
position = Vector2(3.5, -30)
scale = Vector2(5.55, 4.05)

[node name="Direction" type="Node2D" parent="."]

[node name="DownRay" type="RayCast2D" parent="Direction"]
position = Vector2(-32, -8)
target_position = Vector2(0, 20)

[node name="FrontRay" type="RayCast2D" parent="Direction"]
position = Vector2(-34, -24)
target_position = Vector2(-20, 0)

[node name="Sprite2D" type="Sprite2D" parent="Direction"]
material = ExtResource("2_vm16v")
position = Vector2(0, -16)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_6xjlv")
hframes = 2
